[gd_scene load_steps=2 format=2]

[ext_resource path="res://layers/creation_layer.gd" type="Script" id=1]

[node name="CreationLayer" type="Node2D"]
script = ExtResource( 1 )

[node name="ProcessorName" type="TextEdit" parent="."]
margin_left = 250.897
margin_top = 499.036
margin_right = 282.897
margin_bottom = 531.036
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemName" type="TextEdit" parent="."]
margin_left = 202.585
margin_top = 231.911
margin_right = 458.585
margin_bottom = 263.911
rect_pivot_offset = Vector2( 156, 107.828 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreadName" type="TextEdit" parent="."]
margin_left = 611.505
margin_top = 233.782
margin_right = 867.505
margin_bottom = 265.782
rect_pivot_offset = Vector2( 156, 107.828 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemValue" type="TextEdit" parent="."]
margin_left = 204.051
margin_top = 279.432
margin_right = 268.051
margin_bottom = 311.432
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="TextEdit" parent="."]
margin_left = 610.964
margin_top = 325.671
margin_right = 866.964
margin_bottom = 581.671
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProcessorNameL" type="Label" parent="."]
margin_left = 80.9706
margin_top = 498.828
margin_right = 185.971
margin_bottom = 530.828
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Number of Processors"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemNameL" type="Label" parent="."]
margin_left = 61.7419
margin_top = 236.282
margin_right = 175.742
margin_bottom = 268.282
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Semaphore Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemValueL" type="Label" parent="."]
margin_left = 63.4647
margin_top = 278.398
margin_right = 174.465
margin_bottom = 310.398
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Semaphore Value"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreadNameL" type="Label" parent="."]
margin_left = 509.014
margin_top = 235.906
margin_right = 588.014
margin_bottom = 267.906
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Thread Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsL" type="Label" parent="."]
margin_left = 697.613
margin_top = 283.641
margin_right = 776.613
margin_bottom = 315.641
rect_pivot_offset = Vector2( 0, 140.059 )
text = "Thread 
Instructions"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProcessorMessage" type="Label" parent="."]
margin_left = 122.21
margin_top = 610.775
margin_right = 277.21
margin_bottom = 642.775
rect_pivot_offset = Vector2( 0, 140.059 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionMessage" type="Label" parent="."]
margin_left = 660.05
margin_top = 670.812
margin_right = 815.05
margin_bottom = 702.812
rect_pivot_offset = Vector2( 0, 140.059 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemMessage" type="Label" parent="."]
margin_left = 299.44
margin_top = 280.393
margin_right = 454.44
margin_bottom = 312.393
rect_pivot_offset = Vector2( 0, 140.059 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateProcessor" type="Button" parent="."]
margin_left = 194.838
margin_top = 565.801
margin_right = 247.838
margin_bottom = 585.801
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateSem" type="Button" parent="."]
margin_left = 245.6
margin_top = 345.043
margin_right = 298.6
margin_bottom = 365.043
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateInstructions" type="Button" parent="."]
margin_left = 700.177
margin_top = 621.39
margin_right = 753.177
margin_bottom = 641.39
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProcessorTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SemTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ThreadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 447.794
margin_top = 363.277
margin_right = 530.794
margin_bottom = 421.277

[node name="Button" type="Button" parent="."]
margin_left = 460.057
margin_top = 636.508
margin_right = 524.057
margin_bottom = 668.508
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="CreateProcessor" to="." method="_on_CreateProcessor_button_down"]
[connection signal="button_down" from="CreateSem" to="." method="_on_CreateSem_button_down"]
[connection signal="button_down" from="CreateInstructions" to="." method="_on_CreateInstructions_button_down"]
[connection signal="timeout" from="ProcessorTimer" to="." method="_on_ProcessorTimer_timeout"]
[connection signal="timeout" from="SemTimer" to="." method="_on_SemTimer_timeout"]
[connection signal="timeout" from="ThreadTimer" to="." method="_on_ThreadTimer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
